--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,10 @@
     </style>
 
 
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="skills.css">
-    <link rel="stylesheet" href="experience.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/skills.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/experience.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css">
 </head>
 
 <body>
@@ -36,8 +36,8 @@
     <div class="bento-container">
         <!-- Image Slider Section -->
         <div class="bento-item image-slider">
-            <img class="slider-image active" src="https://beyondmebtw.com/assets/images/pv2.jpeg" alt="Pranav speaking">
-            <img class="slider-image" src="https://beyondmebtw.com/assets/images/pv3.jpg" alt="Pranav wondering">
+            <img class="slider-image active img1" src="https://beyondmebtw.com/assets/images/pv2.webp" alt="Pranav speaking">
+            <img class="slider-image img2" src="https://beyondmebtw.com/assets/images/pv3.webp" alt="Pranav wondering">
         </div>
 
         <!-- Updated Who I Am Section -->
