--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
-    <link rel="stylesheet" href="css/styles.css">
+    <!-- <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/profile-card.css">
     <link rel="stylesheet" href="css/welcome-card.css">
     <link rel="stylesheet" href="css/latest-post.css">
     <link rel="stylesheet" href="css/get-in-touch.css">
     <link rel="stylesheet" href="css/featured-posts.css">
     <link rel="stylesheet" href="css/projects-showcase.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css"> -->
 
-    <!-- <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/latest-post.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css"> -->
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
 </head>
 
 <body>
