--- a/about/index.html
+++ b/about/index.html
@@ -177,6 +177,10 @@
                         <div class="skill-tag">Java</div>
                         <div class="skill-tag">Next.js</div>
                         <div class="skill-tag">Vercel</div>
+                        <div class="skill-tag">OpenCV</div>
+                        <div class="skill-tag">Tensorflow</div>
+                        <div class="skill-tag">Flask</div>
+                        <div class="skill-tag">React</div>
                     </div>
                     <div class="skill-application">Used to create responsive and cool websites including this personal
                         portfolio
@@ -186,8 +190,10 @@
                 <div class="skill-category">
                     <h3 class="skill-category-title">Design & Content</h3>
                     <div class="skill-tags-container">
-                        <div class="skill-tag">UI/UX Design</div>
+                        <div class="skill-tag">Design and Content</div>
                         <div class="skill-tag">Content Writing</div>
+                        <div class="skill-tag">Graphic Design</div>
+                        <div class="skill-tag">Content Creation</div>
                         <div class="skill-tag">Digital Marketing</div>
                     </div>
                     <div class="skill-application">Applied to improve user experience in various projects
