--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Home | BeyondMeBtw</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-    <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="icon" type="image/x-icon" href="https://beyondmebtw.com/assets/images/favicon.ico">
     <meta property="og:image" content="https://beyondmebtw.com/assets/images/favicon.ico">
@@ -44,22 +43,6 @@
             <div id="projects" class="link">Projects</div>
             <div id="about" class="link">About</div>
         </div>
-        <!-- <div class="theme-toggle-container pb-5">
-            <label class="inline-flex items-center cursor-pointer">
-                <input type="checkbox" value="" class="sr-only peer" id="theme-switch">
-                <div class="relative w-28 h-14 bg-[#F4F2EF] border-2 border-[#3b342d] shadow-md peer-focus:outline-none rounded-full
-                    peer peer-checked:after:translate-x-[calc(100%+8px)] rtl:peer-checked:after:translate-x-0 peer-checked:after:border-[#E8D9CD]
-                    after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-[#bbafa5] after:border-2 
-                    after:rounded-full after:h-12 after:w-12 after:transition-all peer-checked:bg-[#3b342d]">
-                    <span class="absolute inset-0 flex items-center justify-start pl-2 pointer-events-none">
-                        <img src="assets/images/darkmode.svg" class="h-10 w-10" alt="Light Mode">
-                    </span>
-                    <span class="absolute inset-0 flex items-center justify-end pr-2 pointer-events-none">
-                        <img src="assets/images/lightmode.svg" class="h-10 w-10" alt="Dark Mode">
-                    </span>
-                </div>
-            </label>
-        </div> -->
     </header>
 
     <div class="bento-grid">
@@ -251,7 +234,7 @@
                     <button class="featured-read-more">Read More</button>
                 </div>
             </div>
-            <a href="https://blog.beyondmebtw.com" class="view-all-btn">View All Posts</a>
+            <a href="https://medium.com/@beyondmebtw" class="view-all-btn">View All Posts</a>
         </div>
 
         <!-- Projects Grid -->
