--- a/about/index.html
+++ b/about/index.html
@@ -16,10 +16,15 @@
     </style>
 
 
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
+    <!-- <link rel="stylesheet" href="https://beyondmebtw.com/about/about.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/skills.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/about/experience.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/about/responsive.css"> -->
+
+    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -36,7 +41,8 @@
     <div class="bento-container">
         <!-- Image Slider Section -->
         <div class="bento-item image-slider">
-            <img class="slider-image active img1" src="https://beyondmebtw.com/assets/images/pv2.webp" alt="Pranav speaking">
+            <img class="slider-image active img1" src="https://beyondmebtw.com/assets/images/pv2.webp"
+                alt="Pranav speaking">
             <img class="slider-image img2" src="https://beyondmebtw.com/assets/images/pv3.webp" alt="Pranav wondering">
         </div>
 
@@ -131,18 +137,29 @@
                         <div class="experience-role">Tech Head</div>
                         <div class="experience-duration">Jan 2025 - Present</div>
                         <div class="experience-about">
-                            Leading the technical team in developing club projects and initiatives.
-                            Mentoring junior members and overseeing all technical aspects of club events.
+                            <ul>
+                                As the Head of the Tech team I mentored junior members, and managed all
+                                technical aspects of events. I also secured sponsorships for Gradient Week '25 and
+                                created the club's website. <br>                                
+                                • Event Coordinator for "Parallel Fusion" during Gradient Week '25.<br>
+                                • Event Coordinator for "Uncharted: Lost Voyage" at Utsav '25.<br>
+                            </ul>
                         </div>
+
                     </div>
 
                     <div class="role-container">
                         <div class="experience-role">Tech Team Member</div>
                         <div class="experience-duration">Feb 2024 - Jan 2025</div>
                         <div class="experience-about">
-                            Collaborated on developing club website and technical projects.
-                            Assisted in organizing and conducting technical workshops.
+                            <ul>
+                                • Volunteer, Gradient Week '24 <br>
+                                • Volunteer, Utsav '24, <strong>Uncharted 2.0</strong> <br>
+                                • Event Coordinator, Evengers : Auction Wars, PES Day '24 <br>
+                                • Event Coordinator, "Maze Maniac Resurrected", Phasheshift '24 <br>
+                            </ul>
                         </div>
+
                     </div>
                 </div>
 
@@ -214,11 +231,11 @@
         </div>
 
         <!-- Quotes Section -->
-        <div class="bento-item quotes">
+        <!-- <div class="bento-item quotes">
             <h2 class="section-title">Favorite Quotes</h2>
             <div class="quote">
-                <p></p>
-                <div class="quote-author"></div>
+                <p>To hell with this I'm outta here</p>
+                <div class="quote-author">Ted Mosby, HIMYM S3 E11</div>
             </div>
             <div class="quote">
                 <p></p>
@@ -228,7 +245,7 @@
                 <p></p>
                 <div class="quote-author"></div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="footer">
