--- a/about/index.html
+++ b/about/index.html
@@ -138,11 +138,13 @@
                         <div class="experience-duration">Jan 2025 - Present</div>
                         <div class="experience-about">
                             <ul>
-                                As the Head of the Tech team I mentored junior members, and managed all
-                                technical aspects of events. I also secured sponsorships for Gradient Week '25 and
-                                created the club's website. <br>                                
+                                As the Head of the Tech team I mentored junior members and managed technical aspects of events.
+                                <br>            
+                                • Built the club website : <a href="https://gradientaiml.tech">GradientAIML.tech</a> <br>                    
                                 • Event Coordinator for "Parallel Fusion" during Gradient Week '25.<br>
-                                • Event Coordinator for "Uncharted: Lost Voyage" at Utsav '25.<br>
+                                • Assisted with sponsorhip during Gradient Week '25.<br>
+                                • Managing the club Linkedin page since 13th April, 2025.<br>                                                     
+                                • Event Coordinator for "Uncharted: Lost Voyage" at Utsav '25.<br>                                
                             </ul>
                         </div>
 
@@ -198,6 +200,7 @@
                         <div class="skill-tag">Tensorflow</div>
                         <div class="skill-tag">Flask</div>
                         <div class="skill-tag">React</div>
+                        <div class="skill-tag">Tailwind CSS</div>
                     </div>
                     <div class="skill-application">Used to create responsive and cool websites including this personal
                         portfolio
@@ -210,6 +213,7 @@
                         <div class="skill-tag">Design and Content</div>
                         <div class="skill-tag">Content Writing</div>
                         <div class="skill-tag">Graphic Design</div>
+                        <div class="skill-tag">Video Editing</div>
                         <div class="skill-tag">Content Creation</div>
                         <div class="skill-tag">Digital Marketing</div>
                     </div>
@@ -223,6 +227,7 @@
                         <div class="skill-tag">Project Management</div>
                         <div class="skill-tag">Event Management</div>
                         <div class="skill-tag">Public Speaking</div>
+                        <div class="skill-tag">Sponsorship</div>
                     </div>
                     <div class="skill-application">Coordinated big events and projects
                     </div>
