--- a/projects/index.html
+++ b/projects/index.html
@@ -16,6 +16,7 @@
     </style>
 
     <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="projgrid.css">
     <link rel="stylesheet" href="responsive.css">
     
     <!-- Vue.js -->
