--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <header>
-        <div id="name">Beyond Deez nuts</div>
+        <div id="name">Beyond Me Btw</div>
         <div id="links">
             <div id="home" class="link">Home</div>
             <div id="blog" class="link">Blog</div>
