--- a/index.html
+++ b/index.html
@@ -15,23 +15,14 @@
         @import url('https://fonts.googleapis.com/css2?family=Delius&family=Kavoon&family=Kreon:wght@300&family=Permanent+Marker&display=swap');
     </style>
 
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/profile-card.css">
-    <link rel="stylesheet" href="css/welcome-card.css">
-    <link rel="stylesheet" href="css/latest-post.css">
-    <link rel="stylesheet" href="css/get-in-touch.css">
-    <link rel="stylesheet" href="css/featured-posts.css">
-    <link rel="stylesheet" href="css/projects-showcase.css">
-    <link rel="stylesheet" href="css/responsive.css">
-
-    <!-- <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/styles.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/profile-card.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/welcome-card.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/latest-post.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/get-in-touch.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
-    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css"> --> 
+    <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
 </head>
 
 <body>
@@ -64,7 +55,7 @@
             <a href="https://beyondmebtw.com/about" class="learn-more-btn">Learn more about me</a>
         </div>
 
-        <!-- Contact/Get in Touch Section - Moved to top -->
+        <!-- Contact/Get in Touch Section -->
         <div class="bento-item get-in-touch">
             <div class="contact-header">Get in Touch</div>
             <div class="social-links">
@@ -114,13 +105,11 @@
                     </div>
                 </a>
 
-
                 <a href="https://youtube.com/@beyondmebtw" class="social-link" target="_blank">
                     <div class="social-item">
                         <div class="social-icon-wrapper">
                             <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <!-- YouTube Logo -->
                                 <path
                                     d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
                                 </path>
@@ -133,8 +122,6 @@
                         </div>
                     </div>
                 </a>
-
-
 
                 <a href="https://www.linkedin.com/in/pranav-veeraghanta-315760119/" class="social-link" target="_blank">
                     <div class="social-item">
@@ -181,7 +168,7 @@
         <div class="bento-item latest-post">
             <div class="section-title">Latest Post!</div>
             <div class="latest-post-content">
-                <img src="" alt="Latest-ost" class="latest-post-img">
+                <img src="" alt="Latest-post" class="latest-post-img">
                 <div class="latest-post-info">
                     <div>
                         <div class="latest-post-title"></div>
@@ -194,45 +181,10 @@
         </div>
 
         <!-- Featured Posts -->
-        <div class="bento-item featured-posts ">
+        <div class="bento-item featured-posts">
             <h2 class="section-title">Featured Posts</h2>
-            <div class="featured-posts-container">
-                <div class="featured-post fp0">
-                    <img src="" alt="Featured post" class="featured-post-img fp0img">
-                    <div class="featured-post-details">
-                        <h3 class="featured-post-title fp0title"></h3>
-                        <p class="featured-post-date fp0date"></p>
-                        <p class="featured-post-excerpt fp0excerpt"> </p>
-                    </div>
-                    <button class="featured-read-more">Read More</button>
-                </div>
-                <div class="featured-post fp1">
-                    <img src="" alt="Featured post" class="featured-post-img fp1img">
-                    <div class="featured-post-details">
-                        <h3 class="featured-post-title fp1title"></h3>
-                        <p class="featured-post-date fp1date"></p>
-                        <p class="featured-post-excerpt fp1excerpt"></p>
-                    </div>
-                    <button class="featured-read-more">Read More</button>
-                </div>
-                <div class="featured-post fp2">
-                    <img src="" alt="Featured post" class="featured-post-img fp2img">
-                    <div class="featured-post-details">
-                        <h3 class="featured-post-title fp2title"></h3>
-                        <p class="featured-post-date fp2date"></p>
-                        <p class="featured-post-excerpt fp2excerpt"></p>
-                    </div>
-                    <button class="featured-read-more">Read More</button>
-                </div>
-                <div class="featured-post fp3">
-                    <img src="" alt="Featured post" class="featured-post-img fp3img">
-                    <div class="featured-post-details">
-                        <h3 class="featured-post-title fp3title"></h3>
-                        <p class="featured-post-date fp3date"></p>
-                        <p class="featured-post-excerpt fp3excerpt"></p>
-                    </div>
-                    <button class="featured-read-more">Read More</button>
-                </div>
+            <div class="featured-posts-container" id="featured-posts-container">
+                <!-- Featured posts will be dynamically generated here -->
             </div>
             <a href="https://medium.com/@beyondmebtw" class="view-all-btn">View All Posts</a>
         </div>
@@ -240,47 +192,8 @@
         <!-- Projects Grid -->
         <div class="bento-item projects-showcase">
             <h2 class="section-title">Featured Projects</h2>
-            <div class="projects-grid">
-                <div class="project-card p0">
-                    <div class="project-details">
-                        <div class="project-icon">📝</div>
-                        <div>
-                            <h3 class="project-title p0title"></h3>
-                            <p class="project-desc p0excerpt"></p>
-                        </div>
-                    </div>
-                    <button class="project-explore">Explore</button>
-                </div>
-                <div class="project-card p1">
-                    <div class="project-details">
-                        <div class="project-icon">❓</div>
-                        <div>
-                            <h3 class="project-title p1title"></h3>
-                            <p class="project-desc p1excerpt"></p>
-                        </div>
-                    </div>
-                    <button class="project-explore">Explore</button>
-                </div>
-                <div class="project-card p2">
-                    <div class="project-details">
-                        <div class="project-icon">📚</div>
-                        <div>
-                            <h3 class="project-title p2title"></h3>
-                            <p class="project-desc p2excerpt"></p>
-                        </div>
-                    </div>
-                    <button class="project-explore">Explore</button>
-                </div>
-                <div class="project-card p3">
-                    <div class="project-details">
-                        <div class="project-icon">🎙️</div>
-                        <div>
-                            <h3 class="project-title p3title"></h3>
-                            <p class="project-desc p3excerpt"></p>
-                        </div>
-                    </div>
-                    <button class="project-explore">Explore</button>
-                </div>
+            <div class="projects-grid" id="projects-grid">
+                <!-- Projects will be dynamically generated here -->
             </div>
             <a href="https://beyondmebtw.com/projects" class="view-all-btn">View All Projects</a>
         </div>
