--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
                         <h3><span class="about-icon">🎮</span> Beyond Work</h3>
                         <p>
                             When I'm not coding, writing or knee-deep in a project, you'll find me jamming on the
-                            keyboard, doomscrolling through social media or procrastinating.
+                            keyboard, playing video games or doomscrolling through social media or procrastinating.
                         </p>
                         <p>
                             Oh, and if you ever need someone to flawlessly pronounce
@@ -138,13 +138,16 @@
                         <div class="experience-duration">Jan 2025 - Present</div>
                         <div class="experience-about">
                             <ul>
-                                As the Head of the Tech team I mentored junior members and managed technical aspects of events.
-                                <br>            
-                                • Built the club website : <a href="https://gradientaiml.tech">GradientAIML.tech</a> <br>                    
-                                • Event Coordinator for "Parallel Fusion" during Gradient Week '25.<br>
-                                • Assisted with sponsorhip during Gradient Week '25.<br>
-                                • Managing the club Linkedin page since 13th April, 2025.<br>                                                     
-                                • Event Coordinator for "Uncharted: Lost Voyage" at Utsav '25.<br>                                
+                                As the Head of the Tech team I mentored junior members and managed technical aspects of
+                                events.
+                                <br>
+                                • Event Coordinator, <strong>Uncharted: Lost Voyage</strong> at Utsav '25.<br>
+                                • Managing the club <strong>Linkedin</strong> page since 13th April, 2025.<br>
+                                • Assisted with sponsorhip during <strong>Gradient Week '25</strong>.<br>
+                                • Event Coordinator, <strong>Parallel Fusion</strong> during Gradient Week '25.<br>
+                                • Built the club website : <a href="https://gradientaiml.tech">GradientAIML.tech</a>
+                                <br>
+
                             </ul>
                         </div>
 
@@ -155,10 +158,12 @@
                         <div class="experience-duration">Feb 2024 - Jan 2025</div>
                         <div class="experience-about">
                             <ul>
-                                • Volunteer, Gradient Week '24 <br>
-                                • Volunteer, Utsav '24, <strong>Uncharted 2.0</strong> <br>
-                                • Event Coordinator, Evengers : Auction Wars, PES Day '24 <br>
-                                • Event Coordinator, "Maze Maniac Resurrected", Phasheshift '24 <br>
+                                • Event Coordinator, <strong>Maze Maniac Resurrected</strong> during Phasheshift '24
+                                <br>
+                                • Event Coordinator, <strong>Evengers : Auction Wars</strong> during PES week '24 <br>
+                                • Volunteer, <strong>Uncharted 2.0</strong> during Utsav '24 <br>
+                                • Volunteer, <strong>Gradient Week</strong> '24 <br>
+                                • Volunteer, <strong>Maze Maniac 2.0</strong> during Phasheshift '23 <br>
                             </ul>
                         </div>
 
@@ -184,26 +189,61 @@
         <!-- Skills Section -->
         <div class="bento-item skills">
             <h2 class="section-title">Skills</h2>
-            <p>I've developed a diverse skillset through academic pursuits and personal projects:</p>
+            <p style="font-size: 20px;">I've developed a diverse skillset through academic pursuits and personal projects such as:</p>
 
             <div class="skills-container">
+
                 <div class="skill-category">
                     <h3 class="skill-category-title">Software Development</h3>
-                    <div class="skill-tags-container">
-                        <div class="skill-tag">HTML/CSS</div>
-                        <div class="skill-tag">JavaScript</div>
-                        <div class="skill-tag">Python</div>
-                        <div class="skill-tag">Java</div>
-                        <div class="skill-tag">Next.js</div>
-                        <div class="skill-tag">Vercel</div>
-                        <div class="skill-tag">OpenCV</div>
-                        <div class="skill-tag">Tensorflow</div>
-                        <div class="skill-tag">Flask</div>
-                        <div class="skill-tag">React</div>
-                        <div class="skill-tag">Tailwind CSS</div>
+
+                    <div class="skill-subcategories">
+                        <!-- Web Development -->
+                        <div class="skill-subcategory">
+                            <h4 class="skill-subcategory-title">Web Development</h4>
+                            <div class="skill-tags-container">
+                                <div class="skill-tag">HTML/CSS</div>
+                                <div class="skill-tag">JavaScript</div>
+                                <div class="skill-tag">React</div>
+                                <div class="skill-tag">Next.js</div>
+                                <div class="skill-tag">Anime.js</div>
+                                <div class="skill-tag">Node.js</div>
+                                <div class="skill-tag">Nginx</div>
+                                <div class="skill-tag">Tailwind CSS</div>
+                                <div class="skill-tag">Vercel</div>
+                                <div class="skill-tag">Flask</div>
+                            </div>
+                        </div>
+
+                        <!-- Artifical Intelligence & Machine Learning -->
+                        <div class="skill-subcategory">
+                            <h4 class="skill-subcategory-title">Artifical Intelligence & Machine Learning</h4>
+                            <div class="skill-tags-container">
+                                <div class="skill-tag">Tensorflow</div>
+                                <div class="skill-tag">OpenCV</div>
+                                <div class="skill-tag">Pandas</div>
+                                <div class="skill-tag">DepthAI</div>
+                                <div class="skill-tag">PyTorch</div>
+                                <div class="skill-tag">SciKit-Learn</div>
+                            </div>
+                        </div>
+
+                        <!-- General Programming -->
+                        <div class="skill-subcategory">
+                            <h4 class="skill-subcategory-title">General Programming</h4>
+                            <div class="skill-tags-container">
+                                <div class="skill-tag">Python</div>
+                                <div class="skill-tag">JavaScript</div>
+                                <div class="skill-tag">Java</div>
+                                <div class="skill-tag">C/C++</div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="skill-application">Used to create responsive and cool websites including this personal
-                        portfolio
+
+                    <!-- Combined Application Description -->
+                    <div class="skill-application">
+                        Used to create responsive and interactive websites (e.g., this personal portfolio), build
+                        machine learning pipelines for image analysis and prediction, and implement backend logic and
+                        scripting for various tools and applications.
                     </div>
                 </div>
 
@@ -217,8 +257,7 @@
                         <div class="skill-tag">Content Creation</div>
                         <div class="skill-tag">Digital Marketing</div>
                     </div>
-                    <div class="skill-application">Applied to improve user experience in various projects
-                    </div>
+                    <div class="skill-application">Applied to improve user experience in various projects along with design posters and promotional materials.</div>
                 </div>
 
                 <div class="skill-category">
@@ -229,11 +268,12 @@
                         <div class="skill-tag">Public Speaking</div>
                         <div class="skill-tag">Sponsorship</div>
                     </div>
-                    <div class="skill-application">Coordinated big events and projects
-                    </div>
+                    <div class="skill-application">Coordinated events and projects, ensuring smooth execution and stakeholder engagement.</div>
                 </div>
+
             </div>
         </div>
+
 
         <!-- Quotes Section -->
         <!-- <div class="bento-item quotes">
