--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <link rel="stylesheet" href="https://beyondmebtw.com/css/featured-posts.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/projects-showcase.css">
     <link rel="stylesheet" href="https://beyondmebtw.com/css/responsive.css">
+
+        <!-- <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/profile-card.css">
+    <link rel="stylesheet" href="css/welcome-card.css">
+    <link rel="stylesheet" href="css/latest-post.css">
+    <link rel="stylesheet" href="css/get-in-touch.css">
+    <link rel="stylesheet" href="css/featured-posts.css">
+    <link rel="stylesheet" href="css/projects-showcase.css">
+    <link rel="stylesheet" href="css/responsive.css"> -->
 </head>
 
 <body>
