--- a/about/index.html
+++ b/about/index.html
@@ -207,6 +207,7 @@
                                 <div class="skill-tag">Next.js</div>
                                 <div class="skill-tag">Anime.js</div>
                                 <div class="skill-tag">Node.js</div>
+                                <div class="skill-tag">Vue.js</div>
                                 <div class="skill-tag">Nginx</div>
                                 <div class="skill-tag">Tailwind CSS</div>
                                 <div class="skill-tag">Vercel</div>
