--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="featured-posts-container" id="featured-posts-container">
                 <!-- Featured posts will be dynamically generated here -->
             </div>
-            <a href="https://medium.com/@beyondmebtw" class="view-all-btn">View All Posts</a>
+            <a href="https://beyondmetw.com/blog" class="view-all-btn">View All Posts</a>
         </div>
 
         <!-- Projects Grid -->
