--- a/projects/minescan/index.html
+++ b/projects/minescan/index.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>OCR Scanner</title>
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
   <style>
-    body, html {
+    body {
       margin: 0;
-      padding: 0;
-      background: #000;
-      color: white;
       font-family: sans-serif;
-      height: 100%;
-      overflow: hidden;
+      background: #000;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     #video {
-      width: 100vw;
-      height: 100vh;
+      width: 90vw;
+      max-width: 400px;
+      aspect-ratio: 1;
       object-fit: cover;
+      border: 4px solid #4facfe;
+      border-radius: 12px;
+      margin-top: 20px;
     }
 
-    #captureBtn {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 15px 25px;
-      font-size: 16px;
-      background: #4facfe;
+    .controls {
+      margin-top: 15px;
+      display: flex;
+      gap: 10px;
+    }
+
+    button {
+      padding: 10px 15px;
       border: none;
       border-radius: 8px;
+      background: #4facfe;
       color: white;
-      cursor: pointer;
-      z-index: 10;
-    }
-
-    #result {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: white;
-      color: #222;
-      padding: 20px;
-      display: none;
-      overflow-y: auto;
-      z-index: 100;
-    }
-
-    #closeBtn {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      background: #eee;
-      border: none;
-      padding: 8px 12px;
       font-size: 14px;
       cursor: pointer;
+    }
+
+    #preview {
+      margin-top: 20px;
+      max-width: 90vw;
+      max-height: 300px;
+      display: none;
+      border-radius: 10px;
+    }
+
+    #resultBox {
+      background: #fff;
+      color: #000;
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 20px;
+      max-width: 90vw;
+      display: none;
+      white-space: pre-wrap;
     }
 
     canvas {
@@ -69,67 +69,93 @@
 </head>
 <body>
 
-  <video id="video" autoplay playsinline></video>
-  <button id="captureBtn">📸 Scan</button>
+  <video id="video" autoplay playsinline muted></video>
 
-  <div id="result">
-    <button id="closeBtn">Close</button>
-    <h2>Extracted Text</h2>
-    <pre id="textOutput">Processing...</pre>
+  <div class="controls">
+    <button id="captureBtn">📸 Capture</button>
+    <button id="flashBtn">💡 Flash</button>
+    <button id="processBtn" disabled>🔍 OCR</button>
   </div>
+
+  <img id="preview" alt="Captured Image Preview" />
+  <div id="resultBox"></div>
 
   <canvas id="canvas"></canvas>
 
   <script>
-    const video = document.getElementById('video');
-    const captureBtn = document.getElementById('captureBtn');
-    const canvas = document.getElementById('canvas');
-    const result = document.getElementById('result');
-    const textOutput = document.getElementById('textOutput');
-    const closeBtn = document.getElementById('closeBtn');
+    const video = document.getElementById("video");
+    const canvas = document.getElementById("canvas");
+    const captureBtn = document.getElementById("captureBtn");
+    const flashBtn = document.getElementById("flashBtn");
+    const processBtn = document.getElementById("processBtn");
+    const preview = document.getElementById("preview");
+    const resultBox = document.getElementById("resultBox");
 
-    // Initialize camera
+    let stream, track;
+    let imageDataURL;
+
     async function initCamera() {
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: 'environment' },
-          audio: false
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: {
+            facingMode: { ideal: "environment" },
+            width: { ideal: 720 },
+            height: { ideal: 720 },
+            focusMode: "continuous"
+          }
         });
         video.srcObject = stream;
-      } catch (err) {
-        alert('Error accessing camera');
-        console.error(err);
+
+        // Get video track for torch control
+        track = stream.getVideoTracks()[0];
+      } catch (e) {
+        alert("Camera access failed.");
+        console.error(e);
       }
     }
 
-    // OCR logic
-    async function captureAndRecognize() {
-      const ctx = canvas.getContext('2d');
+    captureBtn.onclick = () => {
+      const ctx = canvas.getContext("2d");
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      const dataURL = canvas.toDataURL();
+      imageDataURL = canvas.toDataURL("image/jpeg", 0.9);
+      preview.src = imageDataURL;
+      preview.style.display = "block";
+      processBtn.disabled = false;
+      resultBox.style.display = "none";
+    };
 
-      result.style.display = 'block';
-      textOutput.textContent = 'Processing...';
+    processBtn.onclick = async () => {
+      resultBox.textContent = "Processing...";
+      resultBox.style.display = "block";
 
-      const worker = await Tesseract.createWorker('eng', 1, {
-        logger: m => console.log(m)
+      const worker = await Tesseract.createWorker("eng", 1, {
+        logger: m => console.log(m),
       });
 
-      const { data: { text } } = await worker.recognize(dataURL);
+      const { data: { text } } = await worker.recognize(imageDataURL);
       await worker.terminate();
 
-      textOutput.textContent = text.trim() || 'No text found.';
-    }
+      resultBox.textContent = text.trim() || "No text detected.";
+    };
 
-    // Event bindings
-    captureBtn.onclick = captureAndRecognize;
-    closeBtn.onclick = () => (result.style.display = 'none');
+    flashBtn.onclick = async () => {
+      if (!track) return alert("No camera track available.");
+      const capabilities = track.getCapabilities();
+      if (!capabilities.torch) return alert("Flash not supported on this device.");
+
+      const current = track.getSettings().torch || false;
+      try {
+        await track.applyConstraints({ advanced: [{ torch: !current }] });
+        flashBtn.textContent = !current ? "🔦 Flash On" : "💡 Flash";
+      } catch (e) {
+        console.error("Torch toggle failed:", e);
+      }
+    };
 
     window.onload = initCamera;
   </script>
 
 </body>
 </html>
- 
