--- a/projects/minescan/index.html
+++ b/projects/minescan/index.html
@@ -1,161 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>OCR Scanner</title>
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OCR Scanner</title>
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
+    <style>
+        body {
+            margin: 0;
+            font-family: sans-serif;
+            background: #000;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
 
-    #video {
-      width: 90vw;
-      max-width: 400px;
-      aspect-ratio: 1;
-      object-fit: cover;
-      border: 4px solid #4facfe;
-      border-radius: 12px;
-      margin-top: 20px;
-    }
+        #video {
+            width: 90vw;
+            max-width: 400px;
+            aspect-ratio: 1;
+            object-fit: cover;
+            border: 4px solid #4facfe;
+            border-radius: 12px;
+            margin-top: 20px;
+        }
 
-    .controls {
-      margin-top: 15px;
-      display: flex;
-      gap: 10px;
-    }
+        .controls {
+            margin-top: 15px;
+            display: flex;
+            gap: 10px;
+        }
 
-    button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 8px;
-      background: #4facfe;
-      color: white;
-      font-size: 14px;
-      cursor: pointer;
-    }
+        button {
+            padding: 10px 15px;
+            border: none;
+            border-radius: 8px;
+            background: #4facfe;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+        }
 
-    #preview {
-      margin-top: 20px;
-      max-width: 90vw;
-      max-height: 300px;
-      display: none;
-      border-radius: 10px;
-    }
+        #preview {
+            margin-top: 20px;
+            max-width: 90vw;
+            max-height: 300px;
+            display: none;
+            border-radius: 10px;
+        }
 
-    #resultBox {
-      background: #fff;
-      color: #000;
-      padding: 15px;
-      border-radius: 10px;
-      margin-top: 20px;
-      max-width: 90vw;
-      display: none;
-      white-space: pre-wrap;
-    }
+        #resultBox {
+            background: #fff;
+            color: #000;
+            padding: 15px;
+            border-radius: 10px;
+            margin-top: 20px;
+            max-width: 90vw;
+            display: none;
+            white-space: pre-wrap;
+        }
 
-    canvas {
-      display: none;
-    }
-  </style>
+        canvas {
+            display: none;
+        }
+    </style>
 </head>
+
 <body>
 
-  <video id="video" autoplay playsinline muted></video>
+    <video id="video" autoplay playsinline muted></video>
 
-  <div class="controls">    
-    <button id="flashBtn">💡 Flash</button>
-    <button id="processBtn" disabled>🔍 OCR</button>
-    <button id="captureBtn">📸 Capture</button>
-  </div>
+    <div class="controls">
+        <button id="flashBtn">💡 Flash</button>
+        <button id="processBtn" disabled>🔍 OCR</button>
+        <button id="captureBtn">📸 Capture</button>
+    </div>
 
-  <img id="preview" alt="Captured Image Preview" />
-  <div id="resultBox"></div>
+    <img id="preview" alt="Captured Image Preview" />
+    <div id="resultBox"></div>
 
-  <canvas id="canvas"></canvas>
+    <canvas id="canvas"></canvas>
 
-  <script>
-    const video = document.getElementById("video");
-    const canvas = document.getElementById("canvas");
-    const captureBtn = document.getElementById("captureBtn");
-    const flashBtn = document.getElementById("flashBtn");
-    const processBtn = document.getElementById("processBtn");
-    const preview = document.getElementById("preview");
-    const resultBox = document.getElementById("resultBox");
+    <script>
+        const video = document.getElementById("video");
+        const canvas = document.getElementById("canvas");
+        const captureBtn = document.getElementById("captureBtn");
+        const flashBtn = document.getElementById("flashBtn");
+        const processBtn = document.getElementById("processBtn");
+        const preview = document.getElementById("preview");
+        const resultBox = document.getElementById("resultBox");
 
-    let stream, track;
-    let imageDataURL;
+        let stream, track;
+        let imageDataURL;
 
-    async function initCamera() {
-      try {
-        stream = await navigator.mediaDevices.getUserMedia({
-          video: {
-            facingMode: { ideal: "environment" },
-            width: { ideal: 720 },
-            height: { ideal: 720 },
-            focusMode: "continuous"
-          }
-        });
-        video.srcObject = stream;
+        async function initCamera() {
+            try {
+                stream = await navigator.mediaDevices.getUserMedia({
+                    video: {
+                        facingMode: { ideal: "environment" },
+                        width: { ideal: 720 },
+                        height: { ideal: 720 },
+                        focusMode: "continuous"
+                    }
+                });
+                video.srcObject = stream;
 
-        // Get video track for torch control
-        track = stream.getVideoTracks()[0];
-      } catch (e) {
-        alert("Camera access failed.");
-        console.error(e);
-      }
-    }
+                // Get video track for torch control
+                track = stream.getVideoTracks()[0];
+            } catch (e) {
+                alert("Camera access failed.");
+                console.error(e);
+            }
+        }
 
-    captureBtn.onclick = () => {
-      const ctx = canvas.getContext("2d");
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-      imageDataURL = canvas.toDataURL("image/jpeg", 0.9);
-      preview.src = imageDataURL;
-      preview.style.display = "block";
-      processBtn.disabled = false;
-      resultBox.style.display = "none";
-    };
+        captureBtn.onclick = () => {
+            const ctx = canvas.getContext("2d");
+            canvas.width = video.videoWidth;
+            canvas.height = video.videoHeight;
+            ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+            imageDataURL = canvas.toDataURL("image/jpeg", 0.9);
+            preview.src = imageDataURL;
+            preview.style.display = "block";
+            processBtn.disabled = false;
+            resultBox.style.display = "none";
+        };
 
-    processBtn.onclick = async () => {
-      resultBox.textContent = "Processing...";
-      resultBox.style.display = "block";
+        processBtn.onclick = async () => {
+            resultBox.textContent = "Processing...";
+            resultBox.style.display = "block";
 
-      const worker = await Tesseract.createWorker("eng", 1, {
-        logger: m => console.log(m),
-      });
+            const worker = await Tesseract.createWorker("eng", 1, {
+                logger: m => console.log(m),
+            });
 
-      const { data: { text } } = await worker.recognize(imageDataURL);
-      await worker.terminate();
+            const { data: { text } } = await worker.recognize(imageDataURL);
+            await worker.terminate();
 
-      resultBox.textContent = text.trim() || "No text detected.";
-    };
+            uid = extractUID(text);
 
-    flashBtn.onclick = async () => {
-      if (!track) return alert("No camera track available.");
-      const capabilities = track.getCapabilities();
-      if (!capabilities.torch) return alert("Flash not supported on this device.");
+            resultBox.textContent = uid || "No text detected.";
+        };
 
-      const current = track.getSettings().torch || false;
-      try {
-        await track.applyConstraints({ advanced: [{ torch: !current }] });
-        flashBtn.textContent = !current ? "🔦 Flash On" : "💡 Flash";
-      } catch (e) {
-        console.error("Torch toggle failed:", e);
-      }
-    };
+        function extractUID(text) {
+            // Split into lines and only look at the top 5
+            const lines = text.split('\n').slice(0, 5);
 
-    window.onload = initCamera;
-  </script>
+            // Search for a 5+ digit number using regex
+            for (let line of lines) {
+                const match = line.match(/\b\d{5,}\b/);
+                if (match) {
+                    return match[0]; // Return the first matching number
+                }
+            }
+
+            return null; // If not found
+        }
+
+
+        flashBtn.onclick = async () => {
+            if (!track) return alert("No camera track available.");
+            const capabilities = track.getCapabilities();
+            if (!capabilities.torch) return alert("Flash not supported on this device.");
+
+            const current = track.getSettings().torch || false;
+            try {
+                await track.applyConstraints({ advanced: [{ torch: !current }] });
+                flashBtn.textContent = !current ? "🔦 Flash On" : "💡 Flash";
+            } catch (e) {
+                console.error("Torch toggle failed:", e);
+            }
+        };
+
+        window.onload = initCamera;
+    </script>
 
 </body>
+
 </html>
